# wafer_fault_detection

./: .env.example  .gitignore  .replit  Dockerfile  README.md  app.py  h -f origin main  keep_alive.py  pyproject.toml  requirements.txt  setup.py  test_app.py  upload_data.py
.github/workflows/: main.yml
attached_assets/: Pasted-Cannot-read-properties-of-undefined-reading-parentElement-src-exception-CustomException-src-ex-1747160461237.txt  Pasted-src-exception-CustomException-src-exception-CustomException-Error-occurred-python-script-name-ho-1747161992906.txt  Pasted-src-exception-CustomException-src-exception-CustomException-Error-occurred-python-script-name-ho-1747163180810.txt  Pasted-src-exception-CustomException-src-exception-CustomException-Error-occurred-python-script-name-ho-1747163586645.txt  Pasted-src-exception-CustomException-src-exception-CustomException-Error-occurred-python-script-name-ho-1747163723312.txt
notebooks/: in1__exploratory analysis.ipynb
src/components/: data_ingestion.py
src/configuration/: mongo_db_connection.py
src/constant/: __init__.py
src/entity/: config_entity.py
src/pipeline/: predict_pipeline.py  train_pipeline.py
src/utils/: main_utils.py
templates/: index.html  upload_file.html
upload_data_to_db/: upload.ipynb
